--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "dev": "node --watch src/index.js"
+    "dev": "node --watch src/index.js",
+    "deploy": "rm -rf frontend-static && cd frontend-react && npm run build && rm -rf ../frontend-static && cp -R dist ../frontend-static && cd .. && git add frontend-static && git commit -m 'Add new version of React.' && git push"
   },
   "author": "susdiaz-sudo",
   "license": "ISC",
